--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 </head>
 <body>
 
+  <div class="clock">
+    <div class="hour"></div>
+    <div class="minute"></div>
+    <div class="second"></div>
+    <div class="basis"></div>
+  </div>
+
+  </div>
+
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
